--- a/index.html
+++ b/index.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		
+		<style>
+.split {
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.left {
+  left: 0;
+}
+
+.right {
+  right: 0;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.centered img {
+  width: 150px;
+  border-radius: 50%;
+}
+</style>
 	</head>
 	<body>
+		<div class="split left">
 		<canvas id="snakeScreen" width="540" height="540" style="border:1px solid #000000;"></canvas>
 		<script type="application/javascript" src="GameLogic.js"></script>
+		</div>
+		<div class="split right">
+			<div>
+				<div>
+					<h1 id="scoreLabel">SCORE: 0</h1>
+				</div>
+				<div>
+					<button id="startButton" onClick="startGame()">Start the game</button>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
